--- a/JMAnnApp/style.css
+++ b/JMAnnApp/style.css
@@ -7,7 +7,8 @@ li {
 #login{
     float: right;
     margin-right: 100px;
-    background-color: red;
+    padding-right: 20px;
+    background-color: burlywood;
     position: relative;
 }
 #couple{
@@ -19,14 +20,20 @@ li {
 }
 #signup{
     border-style: solid;
-    background-color: orange;
+    background-color: rgb(139, 196, 230);
     float: left;
     position: relative;
     width: 50%;
-    height: 600px;
+    height: 530px;
     left: 30px;
     margin-top: 20px;
-}
-#create{
+    padding-top: 60px;
     text-align: center;
+}
+input{
+    border-radius: 5px;
+}
+#btnLogin:hover, #btnCreate:hover{
+    background-color: green;
+    color: white;
 }
