--- a/JMAnnApp/style.css
+++ b/JMAnnApp/style.css
@@ -15,7 +15,6 @@ li {
     float: left;
     margin-left: 100px;
     margin-top: 75px;
-    background-color: pink;
     position: relative;
 }
 #signup{
@@ -40,4 +39,16 @@ input{
 h1{
     text-shadow: 1px 1px red;
     color: black;
+}
+button{
+    position: relative;
+    float: left;
+    margin-right: 600px;
+    color: black;
+}
+label {
+    clear: both;
+    display: block;
+    float: left;
+    width: 125px;
 }
