--- a/JMAnnApp/style.css
+++ b/JMAnnApp/style.css
@@ -39,6 +39,7 @@ input{
 h1{
     text-shadow: 1px 1px red;
     color: black;
+    font-family: 'Times New Roman', Times, serif;
 }
 button{
     position: relative;
