--- a/JMAnnApp/superStyle.css
+++ b/JMAnnApp/superStyle.css
@@ -1,6 +1,7 @@
 body{
     padding: 0px;
-    margin: 0px;    
+    margin: 0px;   
+    font-family: "Times New Roman", Times, serif;
 }
 #superFunction{
     padding: 50px 0px 50px 0px;
