--- a/JMAnnApp/style.css
+++ b/JMAnnApp/style.css
@@ -19,7 +19,9 @@ li {
 }
 #signup{
     border-style: solid;
-   
+    background-color: rgb(139, 196, 230);
+    float: left;
+    position: relative;
     width: 50%;
     height: 530px;
     left: 30px;
@@ -46,9 +48,9 @@ button{
     margin-right: 600px;
     color: black;
 }
-label {
+/*label {
     clear: both;
     display: block;
     float: left;
     width: 125px;
-}
+}*/
