--- a/JMAnnApp/newStyle.css
+++ b/JMAnnApp/newStyle.css
@@ -39,7 +39,7 @@ input{
 h1{
     text-shadow: 1px 1px red;
     color: black;
-    font-family: 'Times New Roman', Times, serif;
+    font-family: Arial, Times, serif;
     font-style: italic;
 }
 button{
